oh ya its working super fast 4 secs for most generations if there is no extraction that needs to take place